# magic-leap-2-navigation

./: .clangd  .gitignore  Goal.md  MARKER_DETECTION_IMPLEMENTATION.md  MARKER_OVERLAY_IMPLEMENTATION.md  README.md  TOOL_TRACKING_ROADMAP.md  compile_commands.json  thesis_process.ipynb
CppDocumentationConverted/: convert_doxygen.py
CppDocumentationConverted/output/: camera.md  cv_camera.md  depth_camera.md  head_tracking.md
CppDocumentationConverted/xml/: dir_4fef79e7177ba769987a8da36c892c5f.xml  dir_d652b06dd36f618d440defb220d8b463.xml  group___audio.xml  group___audio_defs.xml  group___audio_output.xml  group___c_v_camera.xml  group___camera.xml  group___controller.xml  group___def_analysis.xml  group___def_buffering.xml  group___def_callbacks.xml  group___def_control.xml  group___def_result_codes.xml  group___graphics_utilities.xml  group___headset_fit.xml  group___input_buffering.xml  group___input_control.xml  group___magic_leap_spaces.xml  group___marker_tracking.xml  group___media_error.xml  group___media_player.xml  group___media_recorder.xml  group___occlusion.xml  group___output_allocation.xml  group___output_buffering.xml  group___output_control.xml  group___output_master_volume.xml  group___output_parameters.xml  group___output_spatial_sound.xml  group___perception.xml  group___spatial_anchor.xml  group___system_notification_manager.xml  index.xml  indexpage.xml  ml__camera__metadata__tags__v2_8h.xml  ml__camera__v2_8h.xml  ml__controller_8h.xml  ml__coordinate__frame__uid_8h.xml  ml__depth__camera_8h.xml  ml__eye__tracking_8h.xml  (+87 more)
CppPlugin/: .clangd
CppPlugin/app_framework/: .clang-format  Android.mk  CMakeLists.txt  LICENSE  README.md  build.py  external_deps.csv  external_deps.jenkins.csv
CppPlugin/app_framework/cmake/: CMakeLists.txt.imgui  CMakeLists.txt.stb  FindMagicLeapAppFramework.cmake  FindMagicLeapAppFramework.cmake.prebuild  af_buildpaths.cmake  assimp.patch  gflags.patch  glm.patch  glsl-compile-fix.patch  patch.py  setupExternals.cmake  stb.patch  zlib.patch
CppPlugin/app_framework/doxygen/: DoxygenLayout.xml  app_framework.dox  build_docs.py  mainpage.md
CppPlugin/app_framework/include/app_framework/: application.h  asset_manager.h  cli_args_parser.h  common.h  component.h  convert.h  graphics_context.h  gui.h  imgui_console.h  intent_helper.h  logging.h  ml_macros.h  node.h  pose.h  preset_resource.h  registry.h  resource_pool.h  resource_pool.inl  runtime_type.h  system_helper.h  system_helper_common.h  toolset.h  version.h  web_request.h
CppPlugin/app_framework/include/app_framework/components/: camera_component.h  light_component.h  magicleap_mesh_component.h  renderable_component.h  text_component.h
CppPlugin/app_framework/include/app_framework/geometry/: axis_mesh.h  cube_mesh.h  quad_mesh.h
CppPlugin/app_framework/include/app_framework/input/: input_command_handler.h  input_handler.h  keyboard.h  ml_input_handler.h
CppPlugin/app_framework/include/app_framework/material/: flat_material.h  magicleap_mesh_visualization_material.h  oes_textured_material.h  pbr_material.h  textured_grayscale_material.h  textured_material.h
CppPlugin/app_framework/include/app_framework/render/: buffer.h  fragment_program.h  geometry_program.h  gl_type_size.h  index_buffer.h  irender_target.h  material.h  mesh.h  program.h  render_target.h  renderer.h  texture.h  variable.h  vertex_buffer.h  vertex_program.h
CppPlugin/app_framework/include/app_framework/shader/: magicleap_mesh_gs_program.h  magicleap_mesh_vs_program.h  oes_textured_fs_program.h  pbr_fs_program.h  pbr_vs_program.h  simple_textured_fs_program.h  simple_textured_vs_program.h  solid_color_fs_program.h  solid_color_vs_program.h
CppPlugin/app_framework/scripts/: format_cpp_blacklist.txt
CppPlugin/app_framework/src/: application.cpp  cli_args_parser.cpp  convert.cpp  gui.cpp  imgui_console.cpp  node.cpp  pose.cpp  registry.cpp  resource_pool.cpp
CppPlugin/app_framework/src/device/: asset_manager.cpp  graphics_context.cpp  intent_helper.cpp  system_helper.cpp  web_request.cpp
CppPlugin/app_framework/src/host/: asset_manager.cpp  graphics_context.cpp  intent_helper.cpp  system_helper.cpp  web_request.cpp
CppPlugin/app_framework/src/input/: input_command_handler.cpp  keyboard.cpp  ml_input_handler.cpp
CppPlugin/app_framework/src/render/: buffer.cpp  geometry_program.cpp  material.cpp  mesh.cpp  program.cpp  render_target.cpp  renderer.cpp  texture.cpp  variable.cpp
CppPlugin/depth_camera/app/src/main/cpp/: CMakeLists.txt  confidence_material.h  main.cpp
CppPlugin/depth_navigation/: DEPTH_CAMERA_SUMMARY.md  README.md
CppPlugin/depth_navigation/app/src/main/cpp/: CMakeLists.txt  compile_commands.json  depth_material.h  main.cpp  marker_detection.cpp  marker_detection.h  marker_detection.md  marker_overlay_material.h  tool_definition.cpp  tool_definition.h  tool_kalman_filter.h  tool_tracking.cpp
HoloLens2-IRTracking-main/: HL2IRToolTracking-Summary.md  IRToolTrack.cpp
ML2-API-docs/: COMPILE_COMMANDS_GUIDE.md
ML2-CAPI-docs/output/: _index.md
ML2-CAPI-docs/xml/: deprecated.xml  dir_5012aa106a7e088fa423f35ece242122.xml  dir_b85ad2c40ba9c631254324f86baa28d3.xml  group___audio_input.xml  group___common.xml  group___def_spatial_sound.xml  group___e_cam.xml  group___facial_expression.xml  group___gesture_classification.xml  group___graphics.xml  group___hand_tracking.xml  group___input.xml  group___input_allocation.xml  group___input_analysis.xml  group___input_mic_muting.xml  group___meshing2.xml  group___planes.xml  group___power_manager.xml  group___space.xml  group___time.xml  group___web_view.xml  mainpage_8md.xml  ml__api_8h.xml  ml__camera__metadata__v2_8h.xml  ml__camera__vendor__tags_8h.xml  ml__eye__calibration_8h.xml  ml__eye__camera_8h.xml  ml__gaze__recognition_8h.xml  ml__graphics_8h.xml  ml__input_8h.xml  ml__media__codec_8h.xml  ml__media__types_8h.xml  ml__media__webvtt_8h.xml  (+37 more)
magic-leap-2-navigation/: Differences-between-HL2-ML2.md
thesis-documentation/: CLEANUP_PLAN.md  ML2_Setup.md  SETUP.md  depth_navigation_structure.md  thesis_process.ipynb
(+979 files in other folders)
